@@ -6,6 +6,8 @@ package Padre::DB::SyntaxHighlight;
 use 5.008;
 use strict;
 use warnings;
+use Padre::DB      ();
+use Padre::Current ();
 
 our $VERSION = '0.52';
 
@@ -14,7 +16,7 @@ sub set_mime_type {
 	my $mime_type = shift;
 	my $module    = shift;
 
-	Padre::DB->begin;
+	my $transaction = Padre::Current->main->lock('DB');
 	$class->delete(
 		'where mime_type = ?', $mime_type,
 	);
@@ -22,7 +24,7 @@ sub set_mime_type {
 		mime_type => $mime_type,
 		value     => $module,
 	);
-	Padre::DB->commit;
+
 	return;
 }
 
